--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.62.2",
     "react-native-bootsplash": "^1.2.1",
     "react-native-exit-app": "^1.1.0",
+    "react-native-flip-card": "^3.5.6",
     "react-native-geolocation-service": "^3.1.0",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-localize": "^1.3.2",
