--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@react-native-community/async-storage": "^1.7.1",
     "apisauce": "^1.1.1",
     "i18n-js": "^3.5.1",
-    "mobx": "^5.15.2",
-    "mobx-react": "^6.1.5",
+    "lodash": "^4.17.15",
     "mobx-sync": "^2.1.2",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
